--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-
 @font-face {
     font-family: 'KyoboHand';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+}
+
+.cursor {
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='45' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🖌️</text></svg>") 16 0, auto;
 }
 
 :root {
@@ -20,7 +23,7 @@ body {
     z-index: -9999;
     margin: 0;
     background-color: rgb(255, 255, 239);
-    background-image: url(img/bg6.jpg);
+    background-image: url(img/bg.jpg);
     backdrop-filter: contrast(0.4);
 }
 
@@ -72,6 +75,11 @@ body {
     margin: 5px;
 }
 
+.botton:hover {
+    background-color: rgb(255, 174, 0);
+    cursor:pointer;
+}
+
 .brush_size {
     accent-color: var(--form-color); /* 폼 요소에 변수 색상 지정 */
 }
@@ -83,6 +91,9 @@ input[type=range][orient=vertical] {
     margin: 20px 19px;
 }
 
+input[type=range][orient=vertical]:hover {
+    cursor: pointer;
+}
 
 .color_wrap {
     position: relative;
@@ -95,4 +106,8 @@ input[type=range][orient=vertical] {
     height: 40px;
     border-radius: 40px;
     margin: 5px;
+}
+
+.color:hover {
+    cursor: pointer;
 }
